adding readme, fixing copy

--- a/views/index.jade
+++ b/views/index.jade
@@ -51,11 +51,10 @@ html(lang="en")
       |   <h1>Progressive Timekeeper</h1>
       |   <p>
       |   This is a simple application with which one can do "progressive
-      |   timekeeping" &ndash; keeping track of what categories people who
-      |   speak identify with (e.g. sex, gender, racial identity, power
-      |   position, etc).  It's used to help people think about whether or not
-      |   speaking turns in their organization's meetings are in fact
-      |   equitable.
+      |   timekeeping" &ndash; keeping track of speaking time by categories of
+      |   identity (e.g. sex, gender, racial identity, power position, etc).
+      |   It can be used to help people think about whether or not speaking
+      |   time in their organization's meetings are in fact equitable.
       |   </p>
       |   <p>
       |   To use, set up the categories you'd like to track in the <a
@@ -67,7 +66,10 @@ html(lang="en")
       |   </p>
       |   <p>
       |   Please send feedback, suggestions, or ideas to 
-      |   <a href='mailto:cfd@media.mit.edu'>cfd@media.mit.edu</a>.
+      |   <a href='mailto:cfd@media.mit.edu'>cfd@media.mit.edu</a> 
+      |   or <a href='http://twitter.com/cdetar'>@cdetar</a>.
+      |   </p>
+      |   <p>
       |   Source code <a
       |   href='https://github.com/yourcelf/progressive-timekeeper'>freely
       |   available on github</a>.
