--- a/views/index.jade
+++ b/views/index.jade
@@ -30,7 +30,7 @@ html(lang="en")
       |   <a href='#' class='settings cta cta-yellow'>settings</a>
       |   <a href='#' class='graph cta cta-yellow'>graph</a>
       |   <a href='#' class='about cta cta-yellow'>about</a>
-      |   <a href='#' class='reset'>reset times</a>
+      |   <a href='#' class='reset cta cta-yellow'>reset times</a>
       | </div>
     script(type='text/template', id='graph')
       | <div class='graph'>
