--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -17,16 +17,17 @@ a:link.cta, a:visited.cta
   color: white
 
 #main
-  padding: 1em
+  margin-left: auto
+  margin-right: auto
+  min-width: 240px
   .clock
     font-size: 48px
     text-align: center
-  .buttonrow
-    width: 50%
-    float: left
   .elapsed
     font-size: 24px
   .meeting-start
+    text-align: center
+  .buttonrow
     text-align: center
   .graph 
     .labels, .lines
@@ -45,6 +46,52 @@ a:link.cta, a:visited.cta
     width: 50px
 
 #footer
-  margin-top: 1em
   clear: both
   text-align: center
+
+@media only screen and (min-width: 0px)
+  #main
+    min-width: 240px
+    padding: 0em
+    a.activate
+      width: 238px
+  .clock
+    display: none
+  .cta
+    padding-left: 5px
+    padding-right: 5px
+    padding-top: -10px
+    height: 30px
+    line-height: 30px
+  #footer 
+    padding-top: none
+    margin-top: none
+    .cta 
+      margin-left: -2px
+      margin-right: -2px
+      font-size: 12px
+
+@media only screen and (min-width: 640px)
+  #main
+    width: 600px
+    margin-left: auto
+    margin-right: auto
+    padding: 1em
+  #footer
+    margin-top: 1em
+    padding-top: 1em
+    .cta
+      font-size: 16px
+      margin-left: 0px
+      margin-right: 0px
+  .cta
+    height: 50px
+    line-height: 50px
+  .buttonrow
+    width: 50%
+    float: left
+    text-align: center
+  .clock
+    display: block
+
+
