making mobile layout not min-width dependent

--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -49,27 +49,29 @@ a:link.cta, a:visited.cta
   clear: both
   text-align: center
 
-@media only screen and (min-width: 0px)
-  #main
-    min-width: 240px
-    padding: 0em
-    a.activate
-      width: 238px
-  .clock
-    display: none
-  .cta
-    padding-left: 5px
-    padding-right: 5px
-    padding-top: -10px
-    height: 30px
-    line-height: 30px
-  #footer 
-    padding-top: none
-    margin-top: none
-    .cta 
-      margin-left: -2px
-      margin-right: -2px
-      font-size: 12px
+//
+// Mobile first
+//
+#main
+  min-width: 240px
+  padding: 0em
+  a.activate
+    width: 238px
+.clock
+  display: none
+.cta
+  padding-left: 5px
+  padding-right: 5px
+  padding-top: -10px
+  height: 30px
+  line-height: 30px
+#footer 
+  padding-top: none
+  margin-top: none
+  .cta 
+    margin-left: -2px
+    margin-right: -2px
+    font-size: 12px
 
 @media only screen and (min-width: 640px)
   #main
