--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -52,7 +52,7 @@ a:link.cta, a:visited.cta
 //
 // Mobile first
 //
-#main
+body
   min-width: 240px
   padding: 0em
   a.activate
@@ -73,8 +73,8 @@ a:link.cta, a:visited.cta
     margin-right: -2px
     font-size: 12px
 
-@media only screen and (min-width: 640px)
-  #main
+@media only screen and (min-width: 768px)
+  body
     width: 600px
     margin-left: auto
     margin-right: auto
