trying device-width

--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -73,7 +73,7 @@ body
     margin-right: -2px
     font-size: 12px
 
-@media only screen and (min-width: 768px)
+@media only screen and (min-device-width: 768px)
   body
     width: 600px
     margin-left: auto
