--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -29,7 +29,12 @@ a:link.cta, a:visited.cta
     text-align: center
   .buttonrow
     text-align: center
-  .graph 
+  div.graphview
+    position: absolute
+    width: 100%
+    height: 100%
+    top: 0
+    left: 0
     .labels, .lines
       text-align: right
       float: left
@@ -52,8 +57,10 @@ a:link.cta, a:visited.cta
 //
 // Mobile first
 //
-body
-  min-width: 240px
+#main
+  min-width: 320px
+  margin-left: auto
+  margin-right: auto
   padding: 0em
   a.activate
     width: 238px
@@ -62,9 +69,8 @@ body
 .cta
   padding-left: 5px
   padding-right: 5px
-  padding-top: -10px
-  height: 30px
-  line-height: 30px
+  height: 40px
+  line-height: 40px
 #footer 
   padding-top: none
   margin-top: none
@@ -73,8 +79,8 @@ body
     margin-right: -2px
     font-size: 12px
 
-@media only screen and (min-device-width: 768px)
-  body
+@media only screen and (min-width: 640px)
+  #main
     width: 600px
     margin-left: auto
     margin-right: auto
@@ -95,5 +101,3 @@ body
     text-align: center
   .clock
     display: block
-
-
