--- a/views/index.jade
+++ b/views/index.jade
@@ -3,14 +3,14 @@ html(lang="en")
   head
     title= title
     !=css('style')
+    meta(name='viewport', content='width=device-width, initial-scale=1, maximum-scale=1')
 
   body
     div#main
       div#app
 
     script(type='text/template', id='editCategory')
-      | Category: <input type='text' name='category' value='<%= category %>' />
-      | Seconds: <input type='text' name='elapsed' value='<%= elapsed || 0 %>' />
+      | <input type='text' name='category' value='<%= category %>' />
 
     script(type='text/template', id='showCategory')
       | <a href='#' class='activate cta <%= active ? "cta-red": "cta-green" %>'><%= category %>: <span class='elapsed'><%= minutes %>:<%= seconds %></span></a>
@@ -33,6 +33,7 @@ html(lang="en")
       |   <a href='#' class='reset cta cta-yellow'>reset times</a>
       | </div>
     script(type='text/template', id='graph')
+      | <div class='graphview'>
       | <div class='graph'>
       |   <div class='labels'></div>
       |   <div class='lines'></div>
@@ -40,6 +41,7 @@ html(lang="en")
       | <div id='footer'>
       |   <a href='#' class='back cta cta-yellow'>Back</a>
       |   <a href='#' class='export cta cta-yellow'>export data</a>
+      | </div>
       | </div>
     script(type='text/template', id='export')
       | <div class='export'><%| exportJSON %></div>
