improving export and copy

--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -29,6 +29,8 @@ a:link.cta, a:visited.cta
     text-align: center
   .buttonrow
     text-align: center
+  .export
+    font-family: monospace
   div.graphview
     position: absolute
     width: 100%
