--- a/views/index.jade
+++ b/views/index.jade
@@ -44,7 +44,18 @@ html(lang="en")
       | </div>
       | </div>
     script(type='text/template', id='export')
-      | <div class='export'><%| exportJSON %></div>
+      | <p>
+      |   The progressive timekeeper stores data locally in your browser &ndash
+      |   it is never sent to any server.  If you'd like to use the data in
+      |   another context, you can copy and paste the JSON format data below.
+      | </p>
+      | <p>
+      |   Elapsed times are in milliseconds, and time series are unix
+      |   timestamps.
+      | </p>
+      | <div class='export'>
+      |   <%| exportJSON %>
+      | </div>
       | <div id='footer'>
       |   <a href='#' class='back cta cta-yellow'>Back</a>
       | </div>
@@ -52,11 +63,11 @@ html(lang="en")
       | <div class='about'>
       |   <h1>Progressive Timekeeper</h1>
       |   <p>
-      |   This is a simple application with which one can do "progressive
-      |   timekeeping" &ndash; keeping track of speaking time by categories of
-      |   identity (e.g. sex, gender, racial identity, power position, etc).
-      |   It can be used to help people think about whether or not speaking
-      |   time in their organization's meetings are in fact equitable.
+      |   This is a simple application with for "progressive timekeeping"
+      |   &ndash; keeping track of speaking time by categories of identity
+      |   (e.g. sex, gender, racial identity, power position, etc).  It can be
+      |   used to help people think about whether speaking time in their
+      |   organization's meetings is really equitable.
       |   </p>
       |   <p>
       |   To use, set up the categories you'd like to track in the <a
