--- a/views/index.jade
+++ b/views/index.jade
@@ -45,7 +45,7 @@ html(lang="en")
       | </div>
     script(type='text/template', id='export')
       | <p>
-      |   The progressive timekeeper stores data locally in your browser &ndash
+      |   The progressive timekeeper stores data locally in your browser &ndash;
       |   it is never sent to any server.  If you'd like to use the data in
       |   another context, you can copy and paste the JSON format data below.
       | </p>
