--- a/views/index.jade
+++ b/views/index.jade
@@ -63,7 +63,7 @@ html(lang="en")
       | <div class='about'>
       |   <h1>Progressive Timekeeper</h1>
       |   <p>
-      |   This is a simple application with for "progressive timekeeping"
+      |   This is a simple application for "progressive timekeeping"
       |   &ndash; keeping track of speaking time by categories of identity
       |   (e.g. sex, gender, racial identity, power position, etc).  It can be
       |   used to help people think about whether speaking time in their
