adding credit for numeroteca viz

--- a/views/index.jade
+++ b/views/index.jade
@@ -78,6 +78,9 @@ html(lang="en")
       |   timekeeper, alongside facilitators or stack keepers.
       |   </p>
       |   <p>
+      |   Inspired by this <a href='http://numeroteca.org/2012/01/11/interventions-occupyboston-ga-jan-10th-2012/'>visualization by numeroteca</a>.
+      |   </p>
+      |   <p>
       |   Please send feedback, suggestions, or ideas to 
       |   <a href='mailto:cfd@media.mit.edu'>cfd@media.mit.edu</a> 
       |   or <a href='http://twitter.com/cdetar'>@cdetar</a>.
