--- a/assets/css/style.styl
+++ b/assets/css/style.styl
@@ -69,6 +69,7 @@ a:link.cta, a:visited.cta
     width: 50%
     float: left
   a.activate
+    width: 93%
     height: 80px
     line-height: 30px
     .elapsed
@@ -94,6 +95,8 @@ a:link.cta, a:visited.cta
     margin-left: auto
     margin-right: auto
     padding: 1em
+    a.activate
+      margin-top: 0.4em
   #footer
     margin-top: 1em
     padding-top: 1em
